@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<extension version="2.5" type="plugin" group="content">
+<extension version="2.5" type="plugin" group="content" method="upgrade">
 	<name>plg_content_podcastmanager</name>
 	<creationDate>##DATE##</creationDate>
 	<author>Michael Babker</author>
