@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<extension version="2.5" type="plugin" group="editors-xtd">
+<extension version="2.5" type="plugin" group="editors-xtd" method="upgrade">
 	<name>plg_editors-xtd_podcastmanager</name>
 	<creationDate>##DATE##</creationDate>
 	<author>Michael Babker</author>
