@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<extension version="2.5" type="plugin" group="finder">
+<extension version="2.5" type="plugin" group="finder" method="upgrade">
 	<name>plg_finder_podcastmanager_podcasts</name>
 	<creationDate>##DATE##</creationDate>
 	<author>Michael Babker</author>
